Author: S H Mohanjith (Incsub)

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.4 - ??
----------------------------------------------------------------------
* Improved performance (settings just loaded when needed)
* Added Confirm Subscription action in Subscribers Table

2.3 - 2013/07/26
----------------------------------------------------------------------
* Texts improved
* Reduced time between batches to 30min
* Improved log table
* Fixed error while sending batches
* Fixed minor bugs
* Changed template system
* Improved mails system performance
* Fixed error when sending different post types on weekly or daily digest
* Added new Subscription Management screen
* Fixed bug when saving settings
* Added languages files
* Fixed JS conflict
* Fixed error when sending a test email.


2.2 - 2013/07/18
----------------------------------------------------------------------
* Added auto-opt In option when importing and adding new subscribers.
* Added auto-opt In option in widget
* New Post Types Setting
* Improved some captions
* Improved Settings page, splitted into tabs
* Added new subscribe email customization text field
* Fixed export CSV date
* Minor bug fixing

2.1.1 - 2013/07/06
----------------------------------------------------------------------
* Removed debugging left by mistake

2.1 - 2013/07/06
----------------------------------------------------------------------
* Fixed Fatal error for Single Sites

2.0 - 2013/07/05
----------------------------------------------------------------------
- Plugin completely recoded
- Added a more customizable template
- Emails sent in batches controlled by the user.
- Better styled widget
- New emails sent log
- Send mails weekly or daily
- The plugin sends a confirmation email for each new subscription

1.1.5 - 3/1/2013 - Aaron Edwards
----------------------------------------------------------------------